--- a/lms-platform/package.json
+++ b/lms-platform/package.json
@@ -23,6 +23,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "next-auth": "^4.24.5",
     "postcss-preset-env": "^9.3.0",
     "react": "^18",
     "react-dom": "^18",
