--- a/lms-platform/package.json
+++ b/lms-platform/package.json
@@ -30,6 +30,7 @@
     "next": "14.0.1",
     "postcss-preset-env": "^9.3.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
