--- a/lms-platform/package.json
+++ b/lms-platform/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.10.7",
     "@uploadthing/react": "^5.7.0",
     "axios": "^1.6.1",
     "class-variance-authority": "^0.7.0",
@@ -29,12 +31,14 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "postcss-preset-env": "^9.3.0",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
